cabal-version:  3.0
name:           botan
version:        0.0.1
license:        BSD-3-Clause
author:         Leo D.
maintainer:     leo@apotheca.io
build-type:     Simple
description:
    Low-level bindings for the Botan cryptography library

source-repository head
  type:     git
  location: https://github.com/apotheca/botan.git

library
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        ExistentialQuantification
        NoImplicitPrelude
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        ScopedTypeVariables
        TypeApplications
    exposed-modules:
        Botan
        Botan.Bcrypt
        Botan.BlockCipher
        Botan.Cipher
        Botan.Error
        Botan.Hash
        Botan.KDF
        Botan.Mac
        Botan.MPI
        Botan.PwdHash
        Botan.Random
        Botan.Utility
        Botan.Version
        Botan.View
    other-modules:
        Botan.Prelude
        Botan.Make
        Paths_botan
    build-depends:
        base >= 4 && < 5,
        bytestring,
        text
    includes:
        botan/ffi.h
    if os(windows)
        -- UNTESTED, PROBABLY WRONG
        extra-libraries: botan-3
    else
        pkgconfig-depends: botan-3 >= 3.0.0
    -- cc-options:     -Wall
    -- ghc-options:    -Wall -funbox-strict-fields     
