cabal-version:  3.0
name:           botan
version:        0.0.1
license:        BSD-3-Clause
author:         Leo D.
maintainer:     leo@apotheca.io
build-type:     Simple
description:
    Low-level bindings for the Botan cryptography library

source-repository head
  type:     git
  location: https://github.com/apotheca/botan.git

library
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        ExistentialQuantification
        NoImplicitPrelude
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        ScopedTypeVariables
        TypeApplications
    exposed-modules:
        Botan
        Botan.Bcrypt
        Botan.BlockCipher
        Botan.Cipher
        Botan.Error
        Botan.FPE
        Botan.Hash
        Botan.HOTP
        Botan.KDF
        Botan.KeyWrap
        -- TODO: Rename Botan.MAC
        Botan.Mac
        Botan.MPI
        -- Botan.PBKDF
        Botan.PubKey
        Botan.PubKey.Decrypt
        Botan.PubKey.DH
        Botan.PubKey.DSA
        Botan.PubKey.Ed25519
        Botan.PubKey.ElGamal
        Botan.PubKey.Encrypt
        -- Botan.PubKey.KeyEncapsulation
        Botan.PubKey.KeyAgreement
        Botan.PubKey.RSA
        Botan.PubKey.Sign
        Botan.PubKey.Verify
        -- Botan.PubKey.X25519
        Botan.PwdHash
        Botan.Random
        -- Botan.Scrypt
        -- Botan.SRP6
        Botan.TOTP
        Botan.Utility
        Botan.Version
        Botan.View
        -- Botan.X509
        -- Botan.ZFEC
    other-modules:
        Botan.Prelude
        Botan.Make
        Paths_botan
    build-depends:
        base >= 4 && < 5,
        bytestring,
        text
    includes:
        botan/ffi.h
    if os(windows)
        -- UNTESTED, PROBABLY WRONG
        extra-libraries: botan-3
    else
        pkgconfig-depends: botan-3 >= 3.0.0
    -- cc-options:     -Wall
    -- ghc-options:    -Wall -funbox-strict-fields     
